@@ -1,3 +1,7 @@
+2012-07-20  6.7.8-5 Glenn Randers-Pehrson <glennrp@image...>
+  * Corrected an error in the logic introduced in 6.7.8-3 to always write
+    a color PNG when image->colorspace is sRGB.
+
 2012-07-19  6.7.8-5 Cristy  <quetzlzacatenango@image...>
   * Inverse YUV colorspace now produces pure red as expected.
   * Support halted streams:
